# laskin

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoly.md  sekvenssikaavio.md
src/repositories/: calculations_repository.py  users_repository.py
src/services/: calculator_logic.py  fetch_history.py  login.py  signup.py
src/tests/: calculator_logic_test.py  calculator_view_test.py  fetch_history_test.py  login_test.py  signup_test.py  test_calculations.csv
src/ui/: calculator_view.py  login_view.py  signup_view.py  user_interface.py
