[project]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = [
    {name = "Ismo",email = "152513223+agismos@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "invoke (>=2.2.0,<3.0.0)",
    "werkzeug (>=3.1.3,<4.0.0)",
    "sympy (>=1.13.3,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "numexpr (>=2.10.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
coverage = "^7.6.12"
pylint = "^3.3.5"
autopep8 = "^2.3.2"
werkzeug = "^3.1.3"
